--- a/products/static/css/root/light-root.css
+++ b/products/static/css/root/light-root.css
@@ -8,6 +8,9 @@
   
     --secondary-color:              #85A947;
     --custom-btn-bg-color:          #85A947;
+
+    --link-color :                  #a8bd77;
+    --link-color-hover:             #96b847;
   
     --section-bg-color:             #dae9c3;
   
