--- a/products/templates/patterns/footer.html
+++ b/products/templates/patterns/footer.html
@@ -5,7 +5,7 @@
         <div class="row">
 
             <div class="col-lg-3 col-12 mb-4 pb-2">
-                <a class="navbar-brand mb-2" href="index.html">
+                <a class="navbar-brand mb-2" href="#">
                         <img class="themed-image" src="{% static 'images/light/light-logo.svg' %}" alt="پستینا" style="width: 130px ;height: auto;"
                         data-light = "{% static 'images/light/light-logo.svg' %}"
                         data-light2 = "{% static 'images/light-2/light-logo-2.svg' %}"
@@ -79,15 +79,14 @@
 
                 </div>
                 <div class="dropdown">
-                    <button id="themeButton" aria-expanded="false" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" type="button"><i class="fa-solid fa-duotone fa-adjust" aria-hidden="true"></i>
+                    <button id="footerThemeButton" aria-expanded="false" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" type="button"><i class="fa-solid fa-duotone fa-palette" aria-hidden="true"></i>
                         تم روشن
                     </button>
                     <ul class="dropdown-menu">
                         <li><button class="dropdown-item theme-selector" data-theme="{% static 'css/root/light-root.css' %}" type="button">تم روشن</button></li>
                         <li><button class="dropdown-item theme-selector" data-theme="{% static 'css/root/light-root-2.css' %}" type="button">تم روشن ۲</button></li>
                         <li><button class="dropdown-item theme-selector" data-theme="{% static 'css/root/dark-root.css' %}" type="button">تم تیره</button></li>
-                        <!-- <li><button class="dropdown-item theme-selector" data-theme="{% static 'css/root/dark-root-2.css' %}" type="button">تم تیره ۲</button></li> -->
-                    </ul>
+                        </ul>
                 </div>
                 <p class="copyright-text mt-lg-5 mt-4"><b>کپی رایت تیم پستینا 1403</b></p>
                 <p><b>طراحی و توسعه : </b><a href="https://t.me/MrEvan_ORG" rel="nofollow" target="_blank"><i class="fa-solid fa-duotone fa-code"></i><b> Ehsan Ramezani</b></a></p>
@@ -95,7 +94,3 @@
         </div>
     </div>
 </footer>
-
-
-
-
