--- a/products/static/css/login-styles.css
+++ b/products/static/css/login-styles.css
@@ -1,9 +1,3 @@
-@font-face {
-    font-display: block;
-    font-family:"vazir";
-    src: url("../fonts/Vazir-light.woff2");
-    src:url("../fonts/Vazir-Light.woff")
-  }
   /* --primary-color:                #123524;
   --custom-btn-bg-hover-color:    #123524;
   --link-hover-color:             #123524;
@@ -58,7 +52,7 @@ body {
 }
 
 .welcome-card .btn {
-    max-width: 100px;
+    max-width: 120px;
     background:var(--white-color);
     color: var(--secondary-color);
     padding: 10px 15px;
@@ -100,9 +94,10 @@ form {
 .input-group input {
     width: 94%;
     padding: 8px;
-    border: 1px solid var(--border-color);
+    border: 2px solid var(--border-color);
     border-radius: 100px;
     font-family: vazir;
+    font-weight: 300;
     background-color: var(--white-color);
 }
 
@@ -114,23 +109,32 @@ form {
 }
 
 .btn {
-    width: 100%;
+    width: 95%;
     max-width: 285px;
     padding: 12px;
     font-size: 1em;
     background: var(--secondary-color);
     color:var(--white-color);
     border: none;
-    padding: 10px;
     border-radius: 100px;
     cursor: pointer;
     font-family: vazir;
-    font-weight: bold;
+    font-weight:700;
     transition: 0.3s;
 }
 
 .btn:hover {
     background: var(--primary-color);
+}
+.btn:disabled{
+    border: 2px solid;
+    border-color: var(--secondary-color);
+    color: var(--secondary-color);
+    border-color: var(--secondary-color) !important;
+    background:var(--section-bg-color);
+}
+.btn:disabled:hover{
+    cursor: not-allowed;
 }
 
 .forgot-password {
@@ -181,6 +185,8 @@ form {
 }
 .button-container{
     display: flex;
+    flex-direction:column;
+    align-items: center;
     justify-content: center;
     width: 100%;
 }
@@ -216,6 +222,9 @@ form {
 }
 /* تنظیمات ریسپانسیو */
 @media (max-width: 600px) {
+    .button-container{
+        flex-direction: column;
+    }
     .container {
         flex-direction: column;
         max-width: 90%;
