--- a/products/templates/l-pages/patterns/base.html
+++ b/products/templates/l-pages/patterns/base.html
@@ -1,18 +1,30 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="fa">
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="{% block meta %}{% endblock %}">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="var(--secondary-color)">
-    <title>{% block title %}{% endblock %}</title>
-    <link id="themeStylesheet" rel="stylesheet" href="{% static 'css/root/light-root.css' %}" rel="stylesheet"/>
-    <link rel="stylesheet" href="{% static 'css/login-styles.css' %}">
+<html lang="fa" dir="rtl">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="{% block meta %}{% endblock %}">
+        <link rel="icon" href="{% static 'images/fav.svg' %}" type="image/svg+xml">
+        <link href="{% static 'css/loading.css' %}" rel="stylesheet"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="var(--secondary-color)">
+        <title>{% block title %}{% endblock %}</title>
+        <link rel="stylesheet" href="{% static 'css/root/vazir-fonts.css' %}" rel="stylesheet"/>
+        <link id="themeStylesheet" rel="stylesheet" href="{% static 'css/root/light-root.css' %}" rel="stylesheet"/>
+        <link href="{% static 'css/loading.css' %}" rel="stylesheet"/>
+        <link rel="stylesheet" href="{% static 'css/login-styles.css' %}">
+        <link href="{% static 'awesome-css/duotone.min.css' %}" rel="stylesheet"/>
+        <link href="{% static 'awesome-css/fontawesome.min.css' %}" rel="stylesheet"/>
+        <link rel="stylesheet" href="{% static 'css/floating-menu.css' %}">
+        {% block head %}{% endblock %}
+    </head>
+    <body direction="rtl">
+        {% include "patterns/loading.html" %}
+        {% block content %}{% endblock %}
+        {% include "patterns/floating-menu.html" %}
+    </body>
+    {% block script %}
+    {% endblock %}
     <script src="{% static 'js/theme-toggle.js' %}" defer></script>
-    {% block head %}{% endblock %}
-</head>
-<body direction="rtl"></body>
-{% block content %}{% endblock %}
-</body>
+    <script src="{% static 'js/loading.js' %}"></script>
 </html>
