Add otp login and fixed send messages and its report

--- a/products/templates/admin/base_site.html
+++ b/products/templates/admin/base_site.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block extrahead %}
 <script src="{% static 'js/theme-toggle.js' %}" defer></script>
+<link rel="stylesheet" href="{% static 'css/root/vazir-fonts.css' %}" rel="stylesheet"/>
 <link rel="stylesheet" type="text/css" href="{% static "css/admin_extra.css" %}">
 <link id="themeStylesheet" rel="stylesheet" href="{% static 'css/root/light-root.css' %}" rel="stylesheet"/>
 {{block.super}}
