--- a/products/templates/l-pages/login.html
+++ b/products/templates/l-pages/login.html
@@ -46,7 +46,7 @@
                 </button>
                 </div>
             </form>
-            <a href="{% url 'forgot-password' %}" class="forgot-password"><i class="fa-duotone fa-solid fa-rotate-right fa-xs"></i>ورود با کد یکبار مصرف </a>
+            <a href="{% url 'otp-login' %}" class="forgot-password">ورود با کد یکبار مصرف <i class="fa-duotone fa-solid fa-arrow-left-to-bracket"></i></a>
         </div>
     </div>
 
