--- a/products/static/css/admin_extra.css
+++ b/products/static/css/admin_extra.css
@@ -32,38 +32,6 @@
 
     --body-loud-color:var(--dark-color) !important; */
 }
-/* html[data-theme="light"], :root {
-    --body-bg:var(--section-bg-color);
-    --border-color:var(--border) !important;
-} */
-
-
-
-/* html[data-theme="light"],
-:root {
-    --header-color: #ffc;
-
-    --breadcrumbs-fg: #c4dce8;
-    --breadcrumbs-bg: #264b5d;
-
-
-    --hairline-color: #e8e8e8;
-    --border-color: #ccc;
-
-    --error-fg: #ba2121;
-
-    --message-success-bg: #dfd;
-    --message-warning-bg: #ffc;
-    --message-error-bg: #ffefef;
-
-    --darkened-bg: #f8f8f8; /* A bit darker than --body-bg */
-    /* --selected-bg: #e4e4e4; /* E.g. selected table cells */
-    /* --selected-row: #ffc;
-
-    --button-fg: #fff;
-
-    --close-button-bg: #747474;
-    --close-button-hover-bg: #333;
-    --delete-button-bg: #ba2121;
-    --delete-button-hover-bg: #a41515; 
-} */
+body , input , select , textarea , .dashboard #content{
+    font-family: vazir, "vazir" !important;
+}
